[project]
name = "project"
version = "0.1.0"
description = "Proj"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # "python-dotenv>=1.0.1",
    # "transformers>=4.51.0",
    # "faiss-cpu>=1.11.0",
    # "numpy>=1.26.4",
    # "tqdm>=4.67.1",
    # "sentence-transformers>=5.0.0",
    # "jsonlines>=4.0.0",
    # "accelerate>=1.8.1",
    # "qwen-agent>=0.0.27",
    # "python-dateutil>=2.9.0.post0",
    # "vllm>=0.10.0",
]

# [project.scripts]
# hello = "hello_world:hello"
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [dependency-groups]
# dev = [
#     "ipykernel>=6.29.5",
#     "ruff>=0.6.7",
# ]
